--- a/module_launcher/src/main/res/values/strings.xml
+++ b/module_launcher/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">module_launcher</string>
+    <string name="launcher_name">module_launcher</string>
 </resources>
