1、添加设置页面

--- a/module_user_center/src/main/res/values/strings.xml
+++ b/module_user_center/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">module_user_center</string>
+    <string name="setting_home" translatable="false">Settings</string>
 </resources>
