--- a/CommonRes/src/main/res/values/strings.xml
+++ b/CommonRes/src/main/res/values/strings.xml
@@ -5,4 +5,50 @@
     <string name="public_name_zhihu">知乎日报</string>
     <string name="public_name_gank">干货集中营</string>
     <string name="public_name_gold">稀土掘金</string>
+
+    <string-array name="public_translate_source">
+        <item>自动检测</item>
+        <item>中文</item>
+        <item>英语</item>
+        <item>日语</item>
+        <item>韩语</item>
+        <item>法语</item>
+        <item>德语</item>
+        <item>西班牙语</item>
+        <item>葡萄牙语</item>
+        <item>意大利语</item>
+        <item>俄语</item>
+    </string-array>
+
+    <string-array name="public_translate_obj">
+        <item>自动检测</item>
+        <item>中文</item>
+        <item>英语</item>
+        <item>粤语</item>
+        <item>文言文</item>
+        <item>日语</item>
+        <item>韩语</item>
+        <item>法语</item>
+        <item>西班牙语</item>
+        <item>泰语</item>
+        <item>阿拉伯语</item>
+        <item>俄语</item>
+        <item>葡萄牙语</item>
+        <item>德语</item>
+        <item>意大利语</item>
+        <item>希腊语</item>
+        <item>荷兰语</item>
+        <item>波兰语</item>
+        <item>保加利亚语</item>
+        <item>爱沙尼亚语</item>
+        <item>丹麦语</item>
+        <item>芬兰语</item>
+        <item>捷克语</item>
+        <item>罗马尼亚语</item>
+        <item>斯洛文尼亚语</item>
+        <item>瑞典语</item>
+        <item>匈牙利语</item>
+        <item>繁体中文</item>
+        <item>越南语</item>
+    </string-array>
 </resources>
